Revised workshop description

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 
 
-<meta name="date" content="2018-07-18" />
 
-<title>Using R and GitHub: reproducibility in research</title>
+<title>An Introduction to Community Analyses for Ecologists</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -174,7 +173,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">CSEE.Git.2018-07-18</a>
+      <a class="navbar-brand" href="index.html">UoA.CommEcol.2018</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -205,41 +204,41 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Using R and GitHub: reproducibility in research</h1>
-<h4 class="date"><em>July 18, 2018</em></h4>
+<h1 class="title toc-ignore">An Introduction to Community Analyses for Ecologists</h1>
+<h4 class="date"><em>October 2018</em></h4>
 
 </div>
 
 
 <div style="width:500px; height=350px">
 <div class="figure">
-<img src="images/alex.jpg" />
+<img src="images/mainpage.jpg" />
 
 </div>
 </div>
 <table>
 <thead>
 <tr class="header">
-<th>Guelph University</th>
+<th>University of Alberta University</th>
 <th></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>July 18 2018</td>
+<td>TBD</td>
 <td><strong>Instructor</strong>: <a href="http://www.filazzola.info">Alex Filazzola</a></td>
 </tr>
 <tr class="even">
-<td>1:00 - 4:00 pm</td>
-<td><strong>Co-instructors</strong>: Katrina Gaibisels</td>
+<td>TBD</td>
+<td><strong>Co-instructors</strong>:</td>
 </tr>
 </tbody>
 </table>
 <div id="general-information" class="section level2">
 <h2>General Information</h2>
-<p>Statistical software that are also programming languages, such as R, are excellent tools for conducting analyses of biological data. However, many users are not taking full advantage of their capabilities. This workshop is an introduction to some of the resources that are available to R users that have been developed and implemented in the larger programming community. No prior knowledge of R will be necessary, but this workshop will not be an introduction to R basics. Instead, we will focus on using R Studio and Github to easily sync your data and analyses online. Within this workshop we will explore how to maximize reproducibility, collaborate internationally on statistical analyses, present data summaries, data management, and the promotion of open science</p>
-<p><strong>Who</strong>: The course is aimed at R beginners and novice to intermediate analysts. You do not need to have previous knowledge of R.</p>
-<p><strong>Where</strong>: University of Guelph: 50 Stone Road East, Guelph. <a href="CampusMap.pdf">Rozanski Hall</a></p>
+<p>Ecologists are generally expected to know a larger range of statistics relative to other fields in biology. However, knowledge of the appropriate statistic test to answer an ecological question can be a major limitation for researchers. This workshop is an introduction to the different methods and statistical approaches to analyzing data in community ecology. The workshop will focus on how to match the available data to possible analyses. I will discuss relevant analyses when there are multiple response varaibles, multiple predictors, and examples of presenting interactions (both statistical and ecological). No prior knowledge is necessary, but some basic understanding of the R environment and community ecology will make the workshop more relevant and useful. The goal of this workshop will be to provide a glossary of potential analyses that will assist understanding and presenting ecological data.</p>
+<p><strong>Who</strong>: The course is aimed at R beginners to intermediate analysts. Some previous knowledge of R or analyses in community ecology would be useful.</p>
+<p><strong>Where</strong>: TBD</p>
 <p><strong>Requirements</strong>: Participants should bring a laptop with a Mac, Linux, or Windows operating system (not a tablet, Chromebook, etc.) with administrative privileges. If you want to work along during tutorial, you must have both Git &amp; R studio installed on your own computer (See below for instructions). However, you are still welcome to attend because all examples will be presented via a projector in the classroom.</p>
 <p><strong>Contact</strong>: Please contact <a href="mailto:alex.filazzola@outlook.com">alex.filazzola@outlook.com</a> for more information.</p>
 </div>
