--- a/README.html
+++ b/README.html
@@ -173,7 +173,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">CSEE.Git.2018-07-18</a>
+      <a class="navbar-brand" href="index.html">UoA.CommEcol.2018</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
