--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">An Introduction to Community Analyses for Ecologists</h1>
-<h4 class="date"><em>October 2018</em></h4>
+<h4 class="date"><em>November 2018</em></h4>
 
 </div>
 
@@ -225,11 +225,11 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td>TBD</td>
+<td>November 6th, 2018</td>
 <td><strong>Instructor</strong>: <a href="http://www.filazzola.info">Alex Filazzola</a></td>
 </tr>
 <tr class="even">
-<td>TBD</td>
+<td>2:00 - 5:00 pm</td>
 <td><strong>Co-instructors</strong>:</td>
 </tr>
 </tbody>
@@ -238,7 +238,7 @@ $(document).ready(function () {
 <h2>General Information</h2>
 <p>Ecologists are generally expected to know a larger range of statistics relative to other fields in biology. However, knowledge of the appropriate statistic test to answer an ecological question can be a major limitation for researchers. This workshop is an introduction to the different methods and statistical approaches to analyzing data in community ecology. The workshop will focus on how to match the available data to possible analyses. I will discuss relevant analyses when there are multiple response varaibles, multiple predictors, and examples of presenting interactions (both statistical and ecological). No prior knowledge is necessary, but some basic understanding of the R environment and community ecology will make the workshop more relevant and useful. The goal of this workshop will be to provide a glossary of potential analyses that will assist understanding and presenting ecological data.</p>
 <p><strong>Who</strong>: The course is aimed at R beginners to intermediate analysts. Some previous knowledge of R or analyses in community ecology would be useful.</p>
-<p><strong>Where</strong>: TBD</p>
+<p><strong>Where</strong>: University of Alberta, Edmonton, CW 410 Conference Room, <a href="images/CampusMap.jpg">Campus Map</a></p>
 <p><strong>Requirements</strong>: Participants should bring a laptop with a Mac, Linux, or Windows operating system (not a tablet, Chromebook, etc.) with administrative privileges. If you want to work along during tutorial, you must have both Git &amp; R studio installed on your own computer (See below for instructions). However, you are still welcome to attend because all examples will be presented via a projector in the classroom.</p>
 <p><strong>Contact</strong>: Please contact <a href="mailto:alex.filazzola@outlook.com">alex.filazzola@outlook.com</a> for more information.</p>
 </div>
@@ -254,32 +254,28 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td>1:00</td>
+<td>2:00</td>
 <td>Meet &amp; greet. Test software</td>
 </tr>
 <tr class="even">
-<td>1:10</td>
-<td><a href="Github/Github.html">Github Introduction</a></td>
+<td>2:10</td>
+<td>[Analysis Fundamentals]</td>
 </tr>
 <tr class="odd">
-<td>1:45</td>
-<td><a href="Git.rstudio/Git.rstudio.html">Github and R Studio</a></td>
-</tr>
-<tr class="even">
-<td>2:30</td>
-<td><em>coffee break</em></td>
-</tr>
-<tr class="odd">
-<td>3:00</td>
-<td><a href="Reports/Reports.html">Creating Reports with R Studio</a></td>
+<td>2:45</td>
+<td>[Univariate Stats]</td>
 </tr>
 <tr class="even">
 <td>3:30</td>
-<td><a href="Website/website.html">Publish Reports and websites</a></td>
+<td><em>coffee break</em></td>
 </tr>
 <tr class="odd">
 <td>3:45</td>
-<td>Final discussions</td>
+<td>[Multivariate Stats]</td>
+</tr>
+<tr class="even">
+<td>4:30</td>
+<td>[Indices in Ecology]</td>
 </tr>
 </tbody>
 </table>
