finished univariate analyses

--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td>2:10</td>
-<td>[Analysis Fundamentals]</td>
+<td><a href="Analysis.Fundamental//index.html">Analysis Fundamentals</a></td>
 </tr>
 <tr class="odd">
 <td>2:45</td>
-<td>[Univariate Stats]</td>
+<td><a href="Univariate//index.html">Univariate Stats</a></td>
 </tr>
 <tr class="even">
 <td>3:30</td>
