added in additional content into the multivariate workshop

--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@ $(document).ready(function () {
   <a href="index.html">info</a>
 </li>
 <li>
-  <a href="Github/Github.html">Github</a>
+  <a href="Analysis.Fundamental//index.html">Fundamentals</a>
 </li>
 <li>
-  <a href="Git.rstudio/Git.rstudio.html">Rstudio</a>
+  <a href="Univariate//index.html">Univariate</a>
 </li>
 <li>
-  <a href="Reports/Reports.html">Reports</a>
+  <a href="Indices//indices.html">Multivariate</a>
 </li>
 <li>
   <a href="Website/website.html">Websites</a>
@@ -271,11 +271,11 @@ $(document).ready(function () {
 </tr>
 <tr class="odd">
 <td>3:45</td>
-<td>[Multivariate Stats]</td>
+<td><a href="Indices//indices.html">Multivariate analyses</a></td>
 </tr>
 <tr class="even">
 <td>4:30</td>
-<td>[Indices in Ecology]</td>
+<td>[Bonus]</td>
 </tr>
 </tbody>
 </table>
