--- a/README.html
+++ b/README.html
@@ -181,13 +181,13 @@ $(document).ready(function () {
   <a href="index.html">info</a>
 </li>
 <li>
-  <a href="Github/Github.html">Github</a>
+  <a href="Analysis.Fundamental//index.html">Fundamentals</a>
 </li>
 <li>
-  <a href="Git.rstudio/Git.rstudio.html">Rstudio</a>
+  <a href="Univariate//index.html">Univariate</a>
 </li>
 <li>
-  <a href="Reports/Reports.html">Reports</a>
+  <a href="Indices//indices.html">Multivariate</a>
 </li>
 <li>
   <a href="Website/website.html">Websites</a>
