finished the indices section by adding diversity analyses. Moved ordinaions into its own section

--- a/README.html
+++ b/README.html
@@ -190,7 +190,7 @@ $(document).ready(function () {
   <a href="Indices//indices.html">Multivariate</a>
 </li>
 <li>
-  <a href="Website/website.html">Websites</a>
+  <a href="Ordinations/ordination.html">Ordinations</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
