--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ $(document).ready(function () {
   <a href="Indices//indices.html">Multivariate</a>
 </li>
 <li>
-  <a href="Website/website.html">Websites</a>
+  <a href="Ordinations/ordination.html">Ordinations</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -258,7 +258,7 @@ $(document).ready(function () {
 <td>Meet &amp; greet. Test software</td>
 </tr>
 <tr class="even">
-<td>2:10</td>
+<td>2:05</td>
 <td><a href="Analysis.Fundamental//index.html">Analysis Fundamentals</a></td>
 </tr>
 <tr class="odd">
@@ -266,16 +266,20 @@ $(document).ready(function () {
 <td><a href="Univariate//index.html">Univariate Stats</a></td>
 </tr>
 <tr class="even">
-<td>3:30</td>
+<td>3:15</td>
 <td><em>coffee break</em></td>
 </tr>
 <tr class="odd">
-<td>3:45</td>
+<td>3:30</td>
 <td><a href="Indices//indices.html">Multivariate analyses</a></td>
 </tr>
 <tr class="even">
-<td>4:30</td>
-<td>[Bonus]</td>
+<td>4:15</td>
+<td><a href="Ordinations//ordinations.html">Ordinations</a></td>
+</tr>
+<tr class="odd">
+<td>4:45</td>
+<td>De-brief</td>
 </tr>
 </tbody>
 </table>
