cleaned up some of the scripts and URLs. Added a comic to ordination

--- a/README.html
+++ b/README.html
@@ -181,7 +181,7 @@ $(document).ready(function () {
   <a href="index.html">info</a>
 </li>
 <li>
-  <a href="Analysis.Fundamental//index.html">Fundamentals</a>
+  <a href="Analysis.Fundamental//intro.html">Fundamentals</a>
 </li>
 <li>
   <a href="Univariate//index.html">Univariate</a>
@@ -190,7 +190,7 @@ $(document).ready(function () {
   <a href="Indices//indices.html">Multivariate</a>
 </li>
 <li>
-  <a href="Ordinations/ordination.html">Ordinations</a>
+  <a href="Ordinations/ordinations.html">Ordinations</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
