fixed link error

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ $(document).ready(function () {
   <a href="index.html">info</a>
 </li>
 <li>
-  <a href="Analysis.Fundamental//intro.html">Fundamentals</a>
+  <a href="Analysis.Fundamental//Intro.html">Fundamentals</a>
 </li>
 <li>
   <a href="Univariate//index.html">Univariate</a>
