--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ $(document).ready(function () {
 </tr>
 <tr class="even">
 <td>2:00 - 5:00 pm</td>
-<td><strong>Co-instructors</strong>:</td>
+<td><strong>Co-instructors</strong>: <a href="https://scholar.google.ca/citations?user=rOKTAQkAAAAJ&amp;hl=en">Charlotte Brown</a></td>
 </tr>
 </tbody>
 </table>
@@ -286,13 +286,6 @@ $(document).ready(function () {
 </div>
 <div id="software" class="section level2">
 <h2>Software</h2>
-<p>Please install Git <strong>before</strong> installing R Studio. This allows seamless integration between the two programs because R Studio looks for Git on your computer, but Git does not look for R Studio. In the past, installation in the opposite order has been known to create issues. If you already installed R Studio and Git, but do not see the Git Tab in R Studio then you can follow <a href="https://support.rstudio.com/hc/en-us/articles/200532077-Version-Control-with-Git-and-SVN">this support page</a> to troubleshoot.</p>
-<div id="git" class="section level4">
-<h4>Git</h4>
-<p>Git is a version control system that lets you track who made changes to what when and has options for easily updating a shared or public version of your code on github.com. You will need a supported web browser (current versions of Chrome, Firefox or Safari, or Internet Explorer version 9 or above).</p>
-<p>You will need an account at github.com for parts of the Git lesson. Basic GitHub accounts are free and premium accounts are free to students. We encourage you to create a GitHub account if you don’t have one already. Please consider what personal information you’d like to reveal. For example, you may want to review these instructions for keeping your email address private provided at GitHub.</p>
-<p>Information on how to install Git for each OS is provided by <a href="https://software-carpentry.org/">Software Carpentry</a> and can be found <a href="install.html">here</a></p>
-</div>
 <div id="r" class="section level4">
 <h4>R</h4>
 <p><a href="http://www.r-project.org/">R</a> is a programming language that is especially powerful for data exploration, visualization, and statistical analysis. To interact with R, we use <a href="http://www.rstudio.com/">RStudio</a>.</p>
@@ -318,10 +311,19 @@ $(document).ready(function () {
 </tbody>
 </table>
 </div>
+<div id="packages" class="section level4">
+<h4>Packages</h4>
+<p>Please install the <code>LearnCommAnalysis</code> package before attending. This package contains all the datasets, packages, and functions that will be used in the workshop. The package is available through Github and thus must be installed using <code>devtools</code> package. If you do not have <code>devtools</code>, please install that first before running the command below. There are multiple packages that are installed along-side this package. Therefore, the installation can take some time and could be prone to error. Please do this prior to attending to save time and troubleshoot errors. The most common error is that not all dependencies (i.e. packages that are dependent on other packages) were installed. Read the error message, and if this is an issue, install the package that is missing.</p>
+<pre class="r"><code>library(devtools)
+install_github(&quot;afilazzola/LearnCommAnalysis&quot;)
+
+## Load package
+library(LearnCommAnalysis)</code></pre>
+</div>
 </div>
 <div id="other-workshops" class="section level2">
 <h2>Other workshops</h2>
-<p>If you enjoyed this workshop and were interested in learning more, I also run a workshop on R-basics and Introduction to Generalized Linear Modelling (GLM) found <a href="https://afilazzola.github.io/YorkU.GLM.2017-04-28/">here</a>. I also have a short introduction on using <a href="https://afilazzola.github.io/Functions.workshop.YorkU2017/">Functions in R</a>.</p>
+<p>If you enjoyed this workshop and were interested in learning more, I also run a workshops on <a href="https://afilazzola.github.io/YorkU.GLM.2017-04-28/">R-basics and Introduction to Generalized Linear Modelling (GLM)</a>, <a href="https://afilazzola.github.io/UoA.GithubWorkshop.2018/">Using Github for Scientific Reproducibility</a>, and a short introduction on using <a href="https://afilazzola.github.io/Functions.workshop.YorkU2017/">Functions in R</a>.</p>
 <p>You can find similar style workshops, usually that are longer and go into more detail, with <a href="https://software-carpentry.org/">Software Carpentry</a>. They have teachers available globally and cover all forms of programming beyond R.</p>
 </div>
 
